# Sentry

./: .coveragerc  .env.docker  .env.example  .gitignore  HighLevelDesignDoc.md  MANUAL_TESTING_GUIDE.md  README.md  context-for-llms.md  context.md  docker-compose.yml  implementation_plan.md  pyproject.toml  pytest.ini  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Dockerfile  __init__.py  requirements.txt
backend/agents/: __init__.py  base_agent.py  detective_agent.py  supervisor.py  surgeon_agent.py  triage_agent.py  validator_agent.py
backend/api/: __init__.py  app.py  auth.py  broadcaster.py  cf_access.py  saas_routes.py
backend/frontend_contract/: openapi_snapshot.json
backend/mcp_tools/: __init__.py  active_tools.py  executor.py  patch_tool.py  read_only_tools.py  restart_tool.py  tool_schemas.py
backend/memory/: __init__.py  store.py
backend/orchestrator/: __init__.py  engine.py  graph.py  llm_client.py  schemas.py
backend/persistence/: __init__.py  alembic.ini  models.py  session.py
backend/persistence/migrations/: env.py
backend/persistence/migrations/versions/: 20260422_0001_initial_schema.py  20260616_0002_saas_multitenancy.py
backend/persistence/repositories/: __init__.py  account_repo.py  audit_repo.py  incident_repo.py  ingestion_token_repo.py  memory_repo.py  token_repo.py
backend/scripts/: __init__.py  create_admin_token.py  list_tokens.py  revoke_token.py
backend/services/: __init__.py  models.py  notifier.py  registry.py
backend/shared/: __init__.py  accounts.py  agent_throttle.py  ai_gateway.py  audit_log.py  circuit_breaker.py  config.py  constants.py  container.py  factory.py  fingerprint.py  interfaces.py  logging_config.py  metrics.py  models.py  observability.py  principal.py  prompts.py  secrets.py  security.py  settings.py  tool_registry.py  vault.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_audit_integration.py  test_audit_log_immutability.py  test_auth.py  test_broadcaster.py  test_bug_regressions.py  test_cf_access.py  test_circuit_breaker.py  test_config.py  test_domain_models.py  test_effectiveness.py  test_engine.py  test_graph_helpers.py  test_graph_nodes.py  test_llm_client.py  test_memory.py  test_metrics.py  test_openapi_snapshot.py  test_p0_regressions.py  test_patch_tool.py  test_persistence.py  test_saas.py  test_sanitization_integration.py  test_schemas.py  test_secrets.py  test_security.py  test_services.py  test_token_api.py  test_token_repo.py  test_tools.py  test_watcher.py  test_zero_trust.py
backend/tests/e2e/: __init__.py  conftest.py  docker_exec.py  fake_llm.py  test_concurrency.py  test_functional.py  test_security.py
backend/tools/: __init__.py  active_tools.py  executor.py  patch_tool.py  read_only_tools.py  restart_tool.py  tool_schemas.py
backend/watcher/: __init__.py  log_watcher.py
calculator-service/: Dockerfile  README.md  app.py
calculator-service/config/: settings.py
calculator-service/routes/: calculate.py  health.py  history.py
docker/: otel-collector-config.yaml
docs/: SAAS.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src/api/: client.js
frontend/src/api/__tests__/: client.test.js
frontend/src/auth/: AuthContext.jsx  AuthScreen.jsx
frontend/src/components/: ConfigPanel.jsx  ConnectService.jsx  ErrorBoundary.jsx  Header.jsx  IncidentDetail.jsx  IncidentList.jsx  Layout.jsx  MemoryPanel.jsx  SecurityPanel.jsx  StatusCards.jsx  ToolsPanel.jsx  TriggerForm.jsx  WatcherControls.jsx  ui.jsx
frontend/src/components/__tests__/: Header.test.jsx  IncidentList.test.jsx  MemoryPanel.test.jsx  StatusCards.test.jsx  ToolsPanel.test.jsx
frontend/src/hooks/: useApi.js  useIncidentStream.js
frontend/src/test/: setup.js
grafana/provisioning/dashboards/: dashboards.yml  sentry.json
grafana/provisioning/datasources/: prometheus.yml
ops/: ARCHITECTURE.md  E2E_TEST_CATALOG.md  RUNBOOK.md  SECURITY.md
prometheus/: prometheus.yml
watched/: .gitkeep
watched/config/: db.py  nginx.conf
