# P3.4 — Tool configuration.
#
# Consolidates ruff / mypy / pytest / coverage config in one place so
# the CI workflow (``.github/workflows/ci.yml``) and local developers
# see identical rules. The legacy ``pytest.ini`` + ``.coveragerc`` are
# kept as thin shims until every test migrates — they take precedence
# over the values here for now.

[project]
name = "sentry"
version = "0.3.0"
description = "Self-healing server-monitor FastAPI + LangGraph application."
requires-python = ">=3.12,<3.15"
readme = "README.md"

# ────────────────────────────────────────────────────────────────────
# ruff — linter + formatter. Runs in CI on every PR (``ruff check``).
# Strict rule enforcement will land in a follow-up cleanup; for now we
# pick a baseline of high-signal lints and let the CI step soft-fail.
# ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "htmlcov",
  "frontend/node_modules",
  "backend/persistence/migrations/versions",
]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade,
# SIM: simplify, RUF: ruff-specific.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",   # long lines — reformatting is out-of-scope for P3.4
  "B008",   # FastAPI Depends(...) in defaults is the idiomatic pattern
  "B904",   # "raise from" is nice-to-have, not a correctness bug
  "SIM108", # ternary style preference, not a correctness issue
  # ── P4.5 retirement pass: these are *intentional* patterns, not bugs.
  "SIM105", # ``try/except/pass`` is clearer than contextlib.suppress in
            # hot-path shutdown code where readers scan for the error.
  "SIM102", # Nested ``if`` is sometimes clearer than a long ``and`` chain.
  "SIM117", # Nested ``with`` blocks are sometimes clearer than a flat
            # comma-joined one, especially when the inner context is
            # conditional or shortlived.
  "RUF012", # ``ClassVar`` annotation for mutable class-level defaults is
            # a Python 3.12+ feature we don't uniformly adopt yet.
]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed to use assert + star imports freely. E402 is
# excused because several test files gate their imports behind
# ``sys.path.insert`` or ``os.environ[...] =`` setup that must run
# first. B017 is excused because a handful of tests deliberately
# ``pytest.raises(Exception)`` as a positive assertion of "any error
# propagates" (e.g. token-collision detection) — narrowing the
# exception type would weaken the test.
"backend/tests/**" = ["F403", "F405", "F811", "B011", "E402", "B017", "RUF043"]
"backend/agents/base_agent.py" = ["B024"]  # ABC intentional, subclasses add the abstract methods

# ────────────────────────────────────────────────────────────────────
# mypy — P3.4c scaffolding for ``--strict``.
#
# Strategy: flip the two strict-defining flags on globally, then use
# per-module overrides to *progressively* relax them back to ``false``
# for packages that still have a large backlog of untyped defs.
#
# This means:
#   * Newly-written modules (``backend.shared.observability``,
#     ``backend.shared.logging_config``, secrets, metrics, principal,
#     auth, broadcaster, persistence.*) are held to strict mode today.
#   * Legacy agent/tool/orchestrator/watcher/api/mcp_tools/services
#     code is allowed to keep its current annotation gaps — CI will
#     still catch new strict-mode violations in the strict modules.
#
# As each legacy package is cleaned up, remove its override block.
# ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
# Empty directory left over from the P3.4b JSONMemoryStore deletion —
# on some Windows checkouts the ACL becomes un-listable, which aborts
# the mypy walker. The directory contains no Python files either way.
exclude = [
  "^backend/memory/",
  "^backend/persistence/migrations/versions/",
]
# Strict-ish defaults — per-module overrides below relax these for the
# packages that aren't yet annotated. When an override is deleted the
# module is held to the strict rules globally.
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
# Alembic migration files are machine-written — no need to typecheck.
module = "backend.persistence.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
# Tests use pytest fixtures that mypy can't infer cleanly.
module = "backend.tests.*"
ignore_errors = true

# ── Progressive-tightening overrides ───────────────────────────────
# Each block below relaxes ``--strict`` for a package that still
# has a meaningful annotation backlog. Delete the block once the
# package is fully annotated.
# P4.7c: retired ``backend.agents.*`` override — all 5 modules pass
# ``mypy --strict``. Promoted to strict-islands below.
#
# P4.7c: retired ``backend.tools.*`` override — all 7 modules pass
# ``mypy --strict``. Promoted to strict-islands below.

[[tool.mypy.overrides]]
module = "backend.orchestrator.*"

disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
# ``backend.api.auth`` + ``backend.api.broadcaster`` are held to strict
# mode via explicit inclusion below. Everything else under ``backend.api``
# (app wiring, route handlers with FastAPI magic) is relaxed.
module = [
  "backend.api.app",
  "backend.api.routes",
  "backend.api.*.routes",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
warn_return_any = false

# P4.7b: retired ``backend.mcp_tools.*`` override — the package is an
# empty shim (only ``__pycache__`` leftover from a historical move)
# so there's nothing left to check. The override block was a
# zero-content no-op. Kept the comment for provenance.
#
# P4.7b: retired ``backend.services.*`` override — ``models.py`` and
# ``registry.py`` are both strict-mode clean (verified with
# ``mypy --strict``). Promoted to the strict-islands list below.


[[tool.mypy.overrides]]
# ``backend.shared`` contains both strict-clean modules (observability,
# logging_config, metrics, secrets, principal, circuit_breaker) and
# legacy ones (container, factory, models, config). We relax the whole
# package globally and tighten individual strict-clean modules below.
module = "backend.shared.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
warn_return_any = false

# ── Strict islands ─────────────────────────────────────────────────
# Modules that ARE fully annotated and held to strict mode. Adding a
# module here is a one-line commitment that it stays clean. Expanded
# in the P4.5 retirement pass to cover the newer persistence + settings
# surfaces that we'd already finished annotating — historical gaps
# (silent ``# type: ignore`` graveyards, ``Missing type arguments for
# generic type "dict"``) were flushed out as part of the same pass.
[[tool.mypy.overrides]]
module = [
  "backend.shared.observability",
  "backend.shared.logging_config",
  "backend.shared.metrics",
  "backend.shared.secrets",
  "backend.shared.principal",
  "backend.shared.circuit_breaker",
  "backend.shared.settings",
  "backend.shared.interfaces",
  "backend.api.auth",
  "backend.api.broadcaster",
  "backend.persistence.session",
  "backend.persistence.models",
  "backend.persistence.repositories.token_repo",
  "backend.persistence.repositories.incident_repo",
  "backend.persistence.repositories.audit_repo",
  # P4.7a: retired the ``backend.watcher.*`` override block — the
  # concrete ``LogWatcher`` + the ``ILogWatcher`` port are both fully
  # annotated and strict-mode clean.
  "backend.watcher.log_watcher",
  # P4.7b: retired the ``backend.services.*`` override block — both
  # ``services.models`` and ``services.registry`` are strict-mode
  # clean (verified via ``mypy --strict``).
  "backend.services.models",
  "backend.services.registry",
  # P4.7c: retired ``backend.agents.*`` + ``backend.tools.*`` override
  # blocks — all agent + tool modules pass ``mypy --strict``.
  "backend.agents.base_agent",
  "backend.agents.triage_agent",
  "backend.agents.detective_agent",
  "backend.agents.surgeon_agent",
  "backend.agents.validator_agent",
  "backend.tools.executor",
  "backend.tools.patch_tool",
  "backend.tools.read_only_tools",
  "backend.tools.active_tools",
  "backend.tools.restart_tool",
  "backend.tools.tool_schemas",
  # ``shared.tool_registry`` got its last ``__init__`` annotation in
  # the P4.7c pass — promote it too.
  "backend.shared.tool_registry",
]



disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
warn_return_any = true

# ────────────────────────────────────────────────────────────────────
# pytest — delegates to the legacy ``pytest.ini`` until P3.4b migration.
# ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
filterwarnings = [
  # pydantic v1 shim under Python 3.14 is noisy but harmless.
  "ignore::UserWarning:langchain_core._api.deprecation",
]

# ────────────────────────────────────────────────────────────────────
# coverage — complements ``pytest-cov``. Report excludes match the
# legacy ``.coveragerc`` so the CI artifact shape is stable.
# ────────────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
  "backend/tests/*",
  "backend/persistence/migrations/*",
  "backend/**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
